commit translated contents

--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -17,6 +17,8 @@
       href: get-started-create-service-instance.md
     - name: 创建实例 - PowerShell
       href: powershell-create-service-instance.md
+    - name: 创建实例 - Visual Studio Code
+      href: vscode-create-service-instance.md
 - name: 教程
   items:
     - name: 1 - 导入第一个 API
