--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Hub
 title: Azure 媒体服务文档
-summary: Azure 媒体服务是一个基于云的媒体工作流平台，用于生成需要编码、打包、内容保护和直播活动广播的解决方案。
+summary: Azure 媒体服务是云和边缘媒体工作流服务的集合，可用于构建需要实时和批处理视频分析、转码、多设备交付服务、内容保护和大规模实时事件广播的解决方案。
 brand: azure
 metadata:
   title: Azure 媒体服务文档
-  description: Azure 媒体服务是一个基于云的媒体工作流平台，用于生成需要编码、打包、内容保护和直播活动广播的解决方案。
+  description: Azure 媒体服务是云和边缘媒体工作流服务的集合，可用于构建需要实时和批处理视频分析、转码、多设备交付服务、内容保护和大规模实时事件广播的解决方案。
   services: media-services
   ms.service: media-services
   ms.subservice: 
@@ -13,12 +13,12 @@ metadata:
   author: Juliako
   ms.author: juliako
   ms.date: 07//2020
-  ms.openlocfilehash: d6f78b4494a16a0522f93658b063d157819c519e
-  ms.sourcegitcommit: 2ff0d073607bc746ffc638a84bb026d1705e543e
+  ms.openlocfilehash: fb258b634ff5511a9e795e8c0990a62bf2d0d22d
+  ms.sourcegitcommit: 814778c54b59169c5899199aeaa59158ab67cf44
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/06/2020
-  ms.locfileid: "87826137"
+  ms.lasthandoff: 09/13/2020
+  ms.locfileid: "90056527"
 highlightedContent:
   items:
   - title: 关于 Azure 媒体服务 v3
