--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -4,6 +4,10 @@
   items:
     - name: 什么是用于 PostgreSQL 的 Azure DB？
       href: overview.md
+    - name: 服务更新
+      items:
+        - name: SSL 根证书即将过期
+          href: concepts-certificate-rotation.md
 - name: 快速入门
   expanded: true
   items:
