--- a/articles/cognitive-services/Custom-Vision-Service/index.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/index.yml
@@ -11,19 +11,19 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/05/2019
-  ms.openlocfilehash: 556af0c505197170a633cf1f949d87f5d2584690
-  ms.sourcegitcommit: edccc241bc40b8b08f009baf29a5580bf53e220c
+  ms.openlocfilehash: 892a5262c88ed39aefd2f3b2458dfa2aa76ecfd6
+  ms.sourcegitcommit: 80b9c8ef63cc75b226db5513ad81368b8ab28a28
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/24/2020
-  ms.locfileid: "82131323"
+  ms.lasthandoff: 09/16/2020
+  ms.locfileid: "90604251"
 landingContent:
 - title: 关于自定义视觉
   linkLists:
   - linkListType: overview
     links:
     - text: 什么是自定义视觉？
-      url: home.md
+      url: overview.md
   - linkListType: whats-new
     links:
     - text: 新增功能
