--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -55,7 +55,7 @@
               href: QuickStarts/CSharp-hand-text.md
             - name: Java
               href: QuickStarts/java-hand-text.md
-            - name: JavaScript
+            - name: Javascript
               href: QuickStarts/javascript-hand-text.md
             - name: Python
               href: QuickStarts/python-hand-text.md
@@ -138,7 +138,7 @@
     - name: Azure PowerShell
       href: 'https://aka.ms/azure-powershell-cognitiveservices'
     - name: 计算机视觉 API v3.1 预览版
-      href: 'https://westus.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-preview-1/operations/5d986960601faab4bf452005'
+      href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-preview-2/operations/5d986960601faab4bf452005'
     - name: 计算机视觉 API v3.0
       href: 'https://aka.ms/computer-vision-v3-ref'
     - name: 计算机视觉 API v2.1
