--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -6,8 +6,6 @@
       href: overview.md
     - name: 关于密钥、机密和证书
       href: about-keys-secrets-certificates.md
-    - name: 新增功能
-      href: whats-new.md
 - name: 快速入门
   expanded: true
   items:
@@ -62,9 +60,9 @@
         - name: Azure Policy 的安全控件
           displayName: 'regulatory, compliance, standards, domains'
           href: ../security-controls-policy.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
-    - name: 通知（预览版）
+    - name: 通知
       items:
-        - name: 使用 Azure 事件网格进行监视（预览版）
+        - name: 使用 Azure 事件网格进行监视
           href: event-grid-overview.md
     - name: 软删除
       items:
@@ -96,6 +94,8 @@
               href: assign-access-policy-portal.md
         - name: 使用 Azure RBAC 管理对密钥、机密和证书的访问权限（预览版）
           href: rbac-guide.md
+        - name: 有关将保管库访问策略迁移到 Azure RBAC 的指南
+          href: rbac-migration.md
         - name: 排查访问问题
           href: troubleshooting-access-issues.md
     - name: 开发
@@ -144,6 +144,8 @@
           href: move-region.md
 - name: 参考
   items:
+    - name: 新增功能
+      href: whats-new.md
     - name: 客户端库
       href: client-libraries.md
     - name: REST API 错误代码 - Azure Key Vault
