--- a/articles/resource-mover/toc.yml
+++ b/articles/resource-mover/toc.yml
@@ -18,9 +18,9 @@
   items:
     - name: 移动概述
       href: about-move-process.md
-    - name: Azure VM 区域移动的支持矩阵
+    - name: 支持 - 跨区域移动 Azure VM
       href: support-matrix-move-region-azure-vm.md
-    - name: Azure SQL 区域移动的支持矩阵
+    - name: 支持 - 跨区域移动 Azure SQL
       href: support-matrix-move-region-sql.md
 - name: 操作方法指南
   items:
@@ -34,11 +34,11 @@
           href: move-region-within-resource-group.md
     - name: 管理区域移动
       items:
-        - name: 修改区域移动的目标设置
+        - name: 修改目标设置
           href: modify-target-settings.md
-        - name: 从区域移动集合中删除资源
+        - name: 从移动集合中删除资源
           href: remove-move-resources.md
-        - name: 管理区域移动过程创建的资源
+        - name: 管理在移动过程中创建的资源
           href: manage-resources-created-move-process.md
 - name: 资源
   items:
