--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -47,6 +47,8 @@
       href: spring-cloud-tutorial-managed-identities-key-vault.md
     - name: 在虚拟网络中部署 Azure Spring Cloud
       href: spring-cloud-tutorial-deploy-in-azure-virtual-network.md
+    - name: 使用托管标识从 Azure Spring Cloud 应用调用 Azure Functions
+      href: spring-cloud-tutorial-managed-identities-functions.md
 - name: 概念
   items:
     - name: 了解应用和部署
