--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -83,6 +83,8 @@
           href: troubleshoot-critical-service-failed-boot-error.md
         - name: 排查启动错误 - 找不到状态
           href: boot-error-status-not-found.md
+        - name: 排查 Windows 无法完成系统配置的问题
+          href: windows-could-not-configure-system.md
         - name: Windows 更新安装容量疑难解答
           href: windows-update-installation-capacity.md
         - name: 不是可启动磁盘
@@ -291,7 +293,7 @@
       items:
         - name: 概述
           href: ../windows/disk-encryption-overview.md
-        - name: 疑难解答
+        - name: 故障排除
           href: ../windows/disk-encryption-troubleshooting.md
         - name: 常见问题
           href: ../windows/disk-encryption-faq.md
@@ -299,7 +301,7 @@
       items:
         - name: 概述
           href: ../linux/disk-encryption-overview.md
-        - name: 疑难解答
+        - name: 故障排除
           href: ../linux/disk-encryption-troubleshooting.md
         - name: 常见问题解答
           href: ../linux/disk-encryption-faq.md
